--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </header>
 
     <div class="selecao">
-    <input type="number" id="num1" class="num">
-    <input type="number" id="num2" class="num">
-    <input type="number" id="num3" class="num">
-    <input type="number" id="num4" class="num">
-    <input type="number" id="num5" class="num">
-    <input type="number" id="num6" class="num">
+    <input type="number" id="num1" class="num" onchange="getValor(value, 0)">
+    <input type="number" id="num2" class="num" onchange="getValor(value, 1)">
+    <input type="number" id="num3" class="num" onchange="getValor(value, 2)">
+    <input type="number" id="num4" class="num" onchange="getValor(value, 3)">
+    <input type="number" id="num5" class="num" onchange="getValor(value, 4)">
+    <input type="number" id="num6" class="num" onchange="getValor(value, 5)">
     </div>
 
     <div class="btnSort">
