--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </div>
 
     <div class="acertos">
-        <h4>Acertos</h4>
-        <p id="acertos"></p>
+        <h4>Acertos: </h4>
+        <p id="acertos"> </p>
     </div>
     
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/carloscacho">@carloscacho</a> </p>
+        <p>Desenvolvido por <a href="https://github.com/lucasortellado">@lucasortellado</a> </p>
     </footer>
     <script src="script.js"></script>
 </body>
